deployment/api_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: forecasting-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: forecast_api
        image: dream-team-api_service:latest # Update with your actual image name
        ports:
        - containerPort: 8000
