deployment/api_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: forecasting-app
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
