deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: forecasting-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: LoadBalancer
