deployment/prediction_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
  namespace: forecasting-app
spec:
  selector:
    app: prediction-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
